# ChangeLog for app-office/mrproject
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/mrproject/ChangeLog,v 1.12 2003/02/20 21:26:59 spider Exp $



*mrproject-0.9 (20 Feb 2003)

  20 Feb 2003; Spider <spider@gentoo.org> mrproject-0.9.ebuild :
  added print dep, libbonobo
  removed doc  USE (not supported in this package anymore)
  moved to use gnome2.eclass
  removed nls USE (not supported in gnome2 packages)


    
*mrproject-0.8 (02 Feb 2003)
  
  04 Feb 2003; Jon Nall <nall@gentoo.org> mrproject-0.8.ebuild :
  added ~ppc

  02 Feb 2003; Spider <spider@gentoo.org> mrproject-0.8.ebuild :
  versionbump

*mrproject-0.7 (02 Dec 2002)
  
  02 Dec 2002; Spider <spider@gentoo.org> mrproject-0.7.ebuild :
  automated version dependency, marked as testing. 

   
*mrproject-0.6 (19 Aug 2002)
  19 Aug 2002; Spider <spider@gentoo.org> mrproject-0.6.ebuild :
  new stable version!
  removed debugging

*mrproject-0.5.94 (07 Aug 2002)
  07 Aug 2002; Gabriele Giorgetti <stroke@gentoo.org> mrproject-0.5.94.ebuild:
  New version, also updated the libmrproject dep to the latest version. 

*mrproject-0.5.1-r1 (15 Jul 2002)
  15 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> mrproject-0.5.1-r1.ebuild:
  Fixed deps to emerge the correct gnome1 version of them. (libglade, gconf and 
  gnome-vfs). Fixes bug #4961
 
*mrproject-0.5.93 (06 Jul 2002)
  06 Jul 2002; Spider <spider@gentoo.org> mrproject-0.5.93.ebuild ;
  slightly old version, now uses debug.eclass
  
*mrproject-0.5.92 (23 May 2002)
  23 May 2002; Spider <spider@gentoo.org> mrproject-0.5.92 :
  New version again  

*mrproject-0.5.91 (22 May 2002)
  22 May 2002; Spider <spider@gentoo.org> mrproject-0.5.91 :
  adding a gnome2 version, depends on dev-libs/libmrproject 

*mrproject-0.5.1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is