@@ -1,6 +1,11 @@
 # ChangeLog for app-office/mrproject
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/mrproject/ChangeLog,v 1.12 2003/02/20 21:26:59 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/mrproject/ChangeLog,v 1.13 2003/02/24 21:01:25 spider Exp $
+
+*mrproject-0.9.1 (24 feb 2003)
+
+  24 feb 2003;  <spider@gentoo.org> mrproject-0.9.1.ebuild files/digest-mrproject-0.9.1 :
+  versionbump
 
 
 
